tambah logo , nama dosen, nama kelompok

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
   <body>
     <article>
       <section>
+        <img src="img/logo mikroskil.JPG"height="100px"></img>
+        <h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
+        <h4 style="padding-top:20px">
+        <h4>Nama Kelompok : +1 Ironwood Branch</h4>
+      </section>
+      <section>
         <h1>VMOL <h4>(e-Video Mail OnLine)</h4></h1>
       </section>
       <section>
