penambahan STMIK MIKROSKIL dan nama anggota, silahkan masing2 anggota menambahkan nim masing2

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,16 @@
   </head>
   <body>
     <article>
-      <section>
-        <img src="img/logo mikroskil.JPG"height="100px"></img>
-        <h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
+      <section><img src="img/logo mikroskil.JPG"height="100px"></img>
+        <h2>STMIK MIKROSKIL</h2><h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
         <h4 style="padding-top:20px">
         <h4>Nama Kelompok : +1 Ironwood Branch</h4>
+      </section>
+      <section><h3 style="color:darkred"> Anggota Kelompok
+        <h4>Michael</h4>
+        <h4>Jansen</h4>
+        <h4>Christian Yaputra (121111478)</h4>
+        <h4>Kelvin Hermawan</h4>
       </section>
       <section>
         <h1>VMOL <h4>(e-Video Mail OnLine)</h4></h1>
