sudah saya tambah nim masing2

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
         <h4>Nama Kelompok : +1 Ironwood Branch</h4>
       </section>
       <section><h3 style="color:darkred"> Anggota Kelompok
-        <h4>Michael</h4>
-        <h4>Jansen</h4>
+        <h4>Michael (121110804)</h4>
+        <h4>Jansen (121110791)</h4>
         <h4>Christian Yaputra (121111478)</h4>
-        <h4>Kelvin Hermawan</h4>
+        <h4>Kelvin Hermawan (121110782)</h4>
       </section>
       <section>
         <h1>VMOL <h4>(e-Video Mail OnLine)</h4></h1>
