--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <h4 style="padding-top:20px">
         <h4>Nama Kelompok : +1 Ironwood Branch</h4>
       </section>
-      <section><h3 style="color:darkred"> Anggota Kelompok
+      <section><h3 style="color:darkred"> Anggota Kelompok :
         <h4>Michael (121110804)</h4>
         <h4>Jansen (121110791)</h4>
         <h4>Christian Yaputra (121111478)</h4>
