Add Slide Kelebihan VMOL to main presentation

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,15 @@
         </ul>
       </section>
       <section>
+        <h2>Kelebihan VMOL</h2>
+        <ul>
+          <li></li>
+          <li>Efisien</li>
+          <li>Harga Ekonomis</li>
+          <li>Modern-Fashion Design Interface</li>
+        </ul>
+      </section>
+      <section>
         <h2>ANY QUESTION?</h2>
       </section>
       <section>
