Penambahan slide efisiensi VMOL

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,16 @@
           <li>Efisien</li>
           <li>Harga Ekonomis</li>
           <li>Modern-Fashion Design Interface</li>
+          <li>Memperluas Jaringan Sosial</li>
+          <li>Terobosan Baru Social Media</li>
+        </ul>
+      </section>
+      <section>
+        <h3>Efisien</h3>
+        <ul>
+          <li></li>
+          <li>Tak Perlu Keahlian Khusus</li>
+          <li>Mempermudah Koneksi Antar Pengguna</li>
         </ul>
       </section>
       <section>
