edit limited free user maks 50

--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,8 @@
           <li></li>
           <li>1. Setiap User yang merupakan member VMOL akan terbagi menjadi 2 : <b>Paid User & Free User</b></li>
           <ul>
-            <li>Free User : format dan template design yang terbatas serta adanya limit dalam jumlah kartu yang dapat dikirim</li>
-            <li>Paid User : format dan template design yang banyak serta tidak ada pembatasan jumlah kartu yang dapat dikirim</li>
+            <li>Free User : format dan template design yang terbatas serta adanya pembatasan / limit terhadap jumlah kartu yang dapat dikirim (maksimal 50)</li>
+            <li>Paid User : format dan template design yang banyak serta tidak ada pembatasan / unlimitted terhadap jumlah kartu yang dapat dikirim</li>
           </ul>
           <li>2. User akan diberikan pilihan untuk mau atau tidak menambahkan video ke dalam design mereka</li>
         </ul>
