background telah diubah...dan logo ad di edit sedikit

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <article>
-      <section><img src="img/logo mikroskil.JPG"height="100px"></img>
+      <section><img src="img/logo mikroskil.png"height="100px"></img>
         <h2>STMIK MIKROSKIL</h2><h4 style="padding-top:30px"> Dosen Pembimbing : Hardy Huang
         <h4 style="padding-top:20px">
         <h4>Nama Kelompok : +1 Ironwood Branch</h4>
