Penambahan slide perbandingan VMOL dengan aplikasi lain

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,14 @@
         </ul>
       </section>
       <section>
+        <h2>Perbandingan VMOL dengan aplikasi lain</h2>
+        <ul>
+          <li></li>
+          <li>Menyediakan layanan yang memuaskan untuk free user</li>
+          <li>Harga paid user yang tidak tinggi dibanding aplikasi lain</li>
+        </ul>
+      </section>
+      <section>
         <h2>ANY QUESTION?</h2>
       </section>
       <section>
