finally error recovered tambah detail kelebihan

--- a/public/index.html
+++ b/public/index.html
@@ -82,16 +82,17 @@
         <h3>Efisien</h3>
         <ul>
           <li></li>
-          <li>Tidak Perlu Keahlian Khusus</li>
-          <li>Mempermudah Koneksi Antar Pengguna</li>
+          <li>Tidak perlu keahlian khusus</li>
+          <li>Tersedia e-book cara penggunaan e-VMOL baik untuk free user maupun paid user</li>
+          <li>Mempermudah koneksi antar pengguna</li>
         </ul>
       </section>
       <section>
         <h2>Perbandingan VMOL dengan aplikasi lain</h2>
         <ul>
           <li></li>
-          <li>Menyediakan layanan yang memuaskan untuk free user</li>
-          <li>Harga paid user yang tidak tinggi dibanding aplikasi lain</li>
+          <li>Menyediakan layanan yang cukup memuaskan untuk free user</li>
+          <li>Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)</li>
         </ul>
       </section>
       <section>
