penambahan slide mengapa terobosan terbaru

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <h4>Kelvin Hermawan (121110782)</h4>
       </section>
       <section>
-        <h1>VMOL <h4>(e-Video Mail OnLine)</h4></h1>
+        <h1>VMOL </h1><h4>(e-Video Mail OnLine)</h4>
       </section>
       <section>
         <h2>Apa itu VMOL?</h2>
@@ -79,7 +79,7 @@
         </ul>
       </section>
       <section>
-        <h3>Efisien</h3>
+        <h2>Mengapa Efisien?</h2>
         <ul>
           <li></li>
           <li>Tidak perlu keahlian khusus</li>
@@ -87,6 +87,15 @@
           <li>Mempermudah koneksi antar pengguna</li>
         </ul>
       </section>
+      <sectioin>
+        <h2>Mengapa disebut Terobosan Baru Social Media?</h2>
+        <ul>
+          <li></li>
+          <li>Interaksi di social media yang umum masih menggunakan media text ataupun foto.</li>
+          <li>Penggunaan video sebagai media interaksi masih jarang digunakan.</li>
+          <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.</li>
+        </ul>
+      </sectioin>
       <section>
         <h2>Perbandingan VMOL dengan aplikasi lain</h2>
         <ul>
