perubahan sedikit, ada yang salah ketik

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
           <li>Mempermudah koneksi antar pengguna</li>
         </ul>
       </section>
-      <sectioin>
+      <section>
         <h2>Mengapa disebut Terobosan Baru Social Media?</h2>
         <ul>
           <li></li>
@@ -95,7 +95,7 @@
           <li>Penggunaan video sebagai media interaksi masih jarang digunakan.</li>
           <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.</li>
         </ul>
-      </sectioin>
+      </section>
       <section>
         <h2>Perbandingan VMOL dengan aplikasi lain</h2>
         <ul>
