Tambah fitur baru untuk paid user VMOL

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
             </ul>
           </li>
           <li>4. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll</li>
+          <li>5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke VMOL</li>
         </ul>
       </section>
       <section>
