--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,17 @@
         </ul>
       </section>
       <section>
+        <h2>Mengapa disebut Harga Ekonomis?</h2>
+        <ul>
+          <li></li>
+          <li>Harga < 500 ribu (per bulan).</li>
+          <li>Terdapat discount bagi User yang sudah lama menggunakan VMOL.</li>
+          <li>Discount juga berlaku pada User yang merekomendasikan VMOL ke User lain.</li>
+          <li>Adapun juga discount bagi User yang ingin membayar langsung 1 tahun.</li>
+          <li>Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.</li>
+        </ul>
+      </section>
+      <section>
         <h2>Mengapa disebut Terobosan Baru Social Media?</h2>
         <ul>
           <li></li>
