edit detail kelebihan efisien, harga ekonomis, terobosan baru social media serta perbedaannya dgn aplikasi lain

--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,8 @@
         <h2>Mengapa Efisien?</h2>
         <ul>
           <li></li>
-          <li>Tidak perlu keahlian khusus</li>
-          <li>Tersedia e-book cara penggunaan e-VMOL baik untuk free user maupun paid user</li>
+          <li>Tidak perlu keahlian khusus dalam mengoperasikannya</li>
+          <li>Tersedia e-book cara penggunaan VMOL baik untuk free user maupun paid user</li>
           <li>Mempermudah koneksi antar pengguna</li>
         </ul>
       </section>
@@ -92,10 +92,10 @@
         <h2>Mengapa disebut Harga Ekonomis?</h2>
         <ul>
           <li></li>
-          <li>Harga < 500 ribu (per bulan).</li>
-          <li>Terdapat discount bagi User yang sudah lama menggunakan VMOL.</li>
-          <li>Discount juga berlaku pada User yang merekomendasikan VMOL ke User lain.</li>
-          <li>Adapun juga discount bagi User yang ingin membayar langsung 1 tahun.</li>
+          <li>Harga yang cukup terjangkau dimana < 500 ribu (per bulan)</li>
+          <li>Discount bagi user lama (dalam hal perpanjangan account)</li>
+          <li>Discount bagi user yang merekomendasikan VMOL kepada teman</li>
+          <li>Discount bagi user yang langsung memperpanjang account selama 1 tahun</li>
           <li>Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.</li>
         </ul>
       </section>
@@ -103,16 +103,16 @@
         <h2>Mengapa disebut Terobosan Baru Social Media?</h2>
         <ul>
           <li></li>
-          <li>Interaksi di social media yang umum masih menggunakan media text ataupun foto.</li>
-          <li>Penggunaan video sebagai media interaksi masih jarang digunakan.</li>
-          <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.</li>
+          <li>Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)</li>
+          <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan</li>
         </ul>
       </section>
       <section>
         <h2>Perbandingan VMOL dengan aplikasi lain</h2>
         <ul>
           <li></li>
-          <li>Menyediakan layanan yang cukup memuaskan untuk free user</li>
+          <li>New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)</li>
+          <li>Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun</li>
           <li>Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)</li>
         </ul>
       </section>
