penambahan slide mengapa dapat memperluas jaringan sosial dan pengeditan warna teks dan progress bar

--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,14 @@
       <section>
         <h1>VMOL </h1><h4>(e-Video Mail OnLine)</h4>
       </section>
-      <section>
-        <h2>Apa itu VMOL?</h2>
+      <section><h2 style="color:darkred"> Apa itu VMOL?</h2>
         <ul>
           <li></li>
           <li>Sebuah Aplikasi pengiriman Surat/Kartu/Undangan/Advertising disertai Video berbasis Online/Mobile</li>
           <li>Sebuah Generasi tren masa kini dalam pembuatan surat/kartu/undangan/Advertising</li>
         </ul>
       </section>
-      <section>
-        <h2>Sejarah VMOL</h2>
+      <section><h2 style="color:darkred"> Sejarah VMOL</h2>
         <ul>
           <li></li>
           <li>Dibangun oleh 2 orang : Michael(Founder) dan Septian Rahman(Co-Founder)</li>
@@ -42,8 +40,7 @@
           <li>Awalnya, direncanakan akan membuat Forum dengan Engine Chatting Online</li>
         </ul>
       </section>
-      <section>
-        <h2>Mengenal VMOL</h2>
+      <section><h2 style="color:darkred"> Mengenal VMOL</h2>
         <ul>
           <li></li>
           <li>1. Setiap User yang merupakan member VMOL akan terbagi menjadi 2 : <b>Paid User & Free User</b></li>
@@ -54,8 +51,7 @@
           <li>2. User akan diberikan pilihan untuk mau atau tidak menambahkan video ke dalam design mereka</li>
         </ul>
       </section>
-      <section>
-        <h2>Lanjutan...</h2>
+      <section><h2 style="color:darkred"> Lanjutan...</h2>
         <ul>
           <li></li>
           <li>3. Untuk video juga terdapat pembagian pada tiap user:
@@ -68,8 +64,7 @@
           <li>5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke VMOL</li>
         </ul>
       </section>
-      <section>
-        <h2>Kelebihan VMOL</h2>
+      <section><h2 style="color:darkred"> Kelebihan VMOL</h2>
         <ul>
           <li></li>
           <li>Efisien</li>
@@ -79,8 +74,7 @@
           <li>Terobosan Baru Social Media</li>
         </ul>
       </section>
-      <section>
-        <h2>Mengapa Efisien?</h2>
+      <section><h2 style="color:darkred"> Mengapa Efisien?</h2>
         <ul>
           <li></li>
           <li>Tidak perlu keahlian khusus dalam mengoperasikannya</li>
@@ -88,8 +82,7 @@
           <li>Mempermudah koneksi antar pengguna</li>
         </ul>
       </section>
-      <section>
-        <h2>Mengapa disebut Harga Ekonomis?</h2>
+      <section><h2 style="color:darkred"> Mengapa disebut Harga Ekonomis?</h2>
         <ul>
           <li></li>
           <li>Harga yang cukup terjangkau dimana < 500 ribu (per bulan)</li>
@@ -99,16 +92,21 @@
           <li>Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.</li>
         </ul>
       </section>
-      <section>
-        <h2>Mengapa disebut Terobosan Baru Social Media?</h2>
+      <section><h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
+        <ul>
+          <li></li>
+          <li>Melalui video, orang akan lebih mudah untuk mengenal orang lain dibandingkan dengan hanya menaruh gambar atau profile picture.</li>
+          <li>Melalui video juga, orang akan mengetahui hobi orang lain sehingga akan memunculkan komunitas orang-orang yang memiliki hobi yang sama.</li>
+        </ul>
+      </section>
+      <section><h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
         <ul>
           <li></li>
           <li>Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)</li>
           <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan</li>
         </ul>
       </section>
-      <section>
-        <h2>Perbandingan VMOL dengan aplikasi lain</h2>
+      <section><h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
         <ul>
           <li></li>
           <li>New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)</li>
@@ -116,9 +114,7 @@
           <li>Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)</li>
         </ul>
       </section>
-      <section>
-        <h2>ANY QUESTION?</h2>
-      </section>
+      <section><h2 style="color:darkred"> ANY QUESTION?</section>
       <section>
         <h1>THANK YOU!!</h1>
       </section>
