--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,13 @@
           <li>Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.</li>
         </ul>
       </section>
+      <section><h2 style="color:darkred">Mengapa disebut Modern-Fashion Design Interface?</h2>
+        <ul>
+          <li></li>
+          <li>Tampilan antarmuka pengguna yang futuristik</li>
+          <li>User akan merasakan sensasi Social Media yang benar-benar beda daripada biasanya</li>
+        </ul>
+      </section>
       <section><h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
         <ul>
           <li></li>
