--- a/public/index.html
+++ b/public/index.html
@@ -95,8 +95,9 @@
       <section><h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
         <ul>
           <li></li>
-          <li>Melalui video, orang akan lebih mudah untuk mengenal orang lain dibandingkan dengan hanya menaruh gambar atau profile picture.</li>
-          <li>Melalui video juga, orang akan mengetahui hobi orang lain sehingga akan memunculkan komunitas orang-orang yang memiliki hobi yang sama.</li>
+          <li>Melalui video, orang akan lebih mudah mengenali orang lain dibandingkan dengan melihat gambar atau profile picture</li>
+          <li>Melalui video juga, dapat mengetahui orang yang memiliki hobi yang sama sehingga dapat tercipta suatu komunitas / kumpulan orang-orang yang memiliki hobi yang sama</li>
+          <li>Adanya fasilitas chatting online sehingga user dapat lebih mengenal satu sama lain</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
@@ -112,6 +113,7 @@
           <li>New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)</li>
           <li>Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun</li>
           <li>Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)</li>
+          <li>Customer service 24 jam yang siap melayani pertanyaan, keluhan maupun saran dari user</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> ANY QUESTION?</section>
