--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,14 @@
           <li>Pembayaran bisa menggunakan PayPal, BitCoin, Visa, MasterCard.</li>
         </ul>
       </section>
+      <section><h2 style="color:darkred"> Mengapa memiliki Modern-Fashion Design Interface?</h2>
+        <ul>
+          <li></li>
+          <li>VMOL memiliki design interface yang modern namun simple tapi tidak membuat para user merasa jenuh.</li>
+          <li>Free User dapat mengubah warna tampilan interface sesuai dengan warna yang disediakan VMOL.</li>
+          <li>Paid User dapat mengubah warna tampilan interface dengan jenis warna yang lebih bervariasi atau pun user ingin mengupload gambar sendiri untuk dijadikan background interface.</li>
+        </ul>
+      </section>
       <section><h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
         <ul>
           <li></li>
