Edit logbook and Add Slide Target Bisnis VMOL

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,16 @@
           <li>5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke VMOL</li>
         </ul>
       </section>
+      <section><h2 style="color:darkred"> Target Bisnis VMOL</h2>
+        <ul>
+          <li></li>
+          <li>MLM(MultiLine Marketing)</li>
+          <li>Advertising</li>
+          <li>OlShop(Online Shopping)</li>
+          <li>Saham</li>
+          <li>Design Interface</li>
+        </ul>
+      </section>
       <section><h2 style="color:darkred"> Kelebihan VMOL</h2>
         <ul>
           <li></li>
