tmbh detail terobosan baru social media dan target bisnis vmol serta logbook

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
           <li>OlShop(Online Shopping)</li>
           <li>Saham</li>
           <li>Design Interface</li>
+          <li>Kartu undangan (ulang tahun, pernikahan, dll)</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Kelebihan VMOL</h2>
@@ -129,6 +130,7 @@
       <section><h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
         <ul>
           <li></li>
+          <li>Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan surat/kartu/undangan/Advertising</li>
           <li>Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)</li>
           <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan</li>
         </ul>
