Tambah kelebihan VMOL beserta penjelasannya

--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@
           <li>Modern-Fashion Design Interface</li>
           <li>Memperluas Jaringan Sosial</li>
           <li>Terobosan Baru Social Media</li>
+          <li>Teknologi Streaming Video yang Memukau</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Mengapa Efisien?</h2>
@@ -136,6 +137,13 @@
           <li>Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan Surat/Kartu/Undangan/Advertising.</li>
           <li>Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang).</li>
           <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.</li>
+        </ul>
+      </section>
+      <section><h2 style="color:darkred">Mengapa Teknologi Streaming Video di VMOL Disebut Memukau?</h2>
+        <ul>
+          <li></li>
+          <li>Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user</li>
+          <li>Paid User dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
