--- a/public/index.html
+++ b/public/index.html
@@ -67,14 +67,24 @@
           <li>5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke <b>VMOL</b>.</li>
         </ul>
       </section>
-      <section><h2 style="color:darkred"> Target Bisnis VMOL</h2>
+      <section><h2>Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
+        <ul>
+          <li></li>
+          <li>A. Ya</li>
+          <li>B. Tidak</li>
+          <li>C. Bisa Jadi</li>
+          <li>D. Galau</li>
+          <li>E. Tidak ada Jawaban</li>
+        </ul>
+      </section>
+      <section><h2 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h2>
         <ul>
           <li></li>
           <li>MLM(MultiLine Marketing)</li>
           <li>Advertising</li>
           <li>OlShop(Online Shopping)</li>
           <li>Saham</li>
-          <li>Design Interface</li>
+          <li>Designer</li>
           <li>Kartu Undangan (Ulang Tahun, Pernikahan, dll)</li>
         </ul>
       </section>
@@ -157,7 +167,17 @@
       </section>
       <section><h2 style="color:darkred"> ANY QUESTION?</section>
       <section>
-        <h1>THANK YOU!!</h1>
+        <h3>THANK YOU!! </h3>
+        <h3>KAMSIA!! </h3>
+        <h3>TERIMA KASIH!!</h3>
+        <h3>MATUR NUWUN!!</h3>
+        <h3>TARIMO KASI!!</h3>
+        <h3>MULIATE!!</h3>
+        <h3>MERCI!!</h3>
+        <h3>GRACIAS!!</h3>
+        <h3>XIE XIE!!</h3>
+        <h3>ARIGATO!!</h3>
+        <h3>OBRIGADO!!</h3>
       </section>
     </article>
     <!-- build:js scripts/scripts.js-->
