--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
           <li>5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke <b>VMOL</b>.</li>
         </ul>
       </section>
-      <section><h2>Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
+      <section><h2 style="color:darkred">Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
         <ul>
           <li></li>
           <li>A. Ya</li>
@@ -152,8 +152,9 @@
       <section><h2 style="color:darkred">Mengapa Teknologi Streaming Video di VMOL Disebut Memukau?</h2>
         <ul>
           <li></li>
-          <li>Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user</li>
-          <li>Paid User dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik</li>
+          <li>Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user.</li>
+          <li>User dapat mendownload video dengan cepat.</li>
+          <li><b>Paid User</b> dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik.</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
@@ -171,12 +172,13 @@
         <h3>KAMSIA!! </h3>
         <h3>TERIMA KASIH!!</h3>
         <h3>MATUR NUWUN!!</h3>
-        <h3>TARIMO KASI!!</h3>
+        <h3>DANKE!!</h3>
         <h3>MULIATE!!</h3>
         <h3>MERCI!!</h3>
         <h3>GRACIAS!!</h3>
-        <h3>XIE XIE!!</h3>
-        <h3>ARIGATO!!</h3>
+        <h3>谢谢!!</h3>
+        <h3>ありがとう!!</h3>
+        <h3>감사합니다!!</h3>
         <h3>OBRIGADO!!</h3>
       </section>
     </article>
