tambahan kata "bengong" sama edit teknologi video memukau

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,8 @@
           <li>B. Tidak</li>
           <li>C. Bisa Jadi</li>
           <li>D. Galau</li>
-          <li>E. Tidak ada Jawaban</li>
+          <li>E. Bengong</li>
+          <li>F. Tidak ada Jawaban</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h2>
@@ -153,7 +154,8 @@
         <ul>
           <li></li>
           <li>Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user.</li>
-          <li>User dapat mendownload video dengan cepat.</li>
+          <li><b>Paid User</b> dapat mengupload / mendownload video dengan cepat.</li>
+          <li><b>Paid User</b> dapat sambil menonton video yang sedang didownload</li>
           <li><b>Paid User</b> dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik.</li>
         </ul>
       </section>
