--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,7 @@
       <section><h2 style="color:darkred"> Apa itu VMOL?</h2>
         <ul>
           <li></li>
-          <li>Sebuah Aplikasi pengiriman Surat/Kartu/Undangan/Advertising disertai Video berbasis Online/Mobile</li>
-          <li>Sebuah Tren Generasi masa kini dalam pembuatan Surat/Kartu/Undangan/Advertising</li>
+          <li>Sebuah Aplikasi masa kini dalam pembuatan dan pengiriman Surat/Kartu/Undangan/Advertising disertai Video berbasis Online/Mobile</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Sejarah VMOL</h2>
@@ -46,25 +45,30 @@
       <section><h2 style="color:darkred"> Mengenal VMOL</h2>
         <ul>
           <li></li>
-          <li>1. Setiap User yang merupakan member <b>VMOL</b> akan terbagi menjadi 2 : <b>Paid User & Free User</b></li>
-          <ul>
-            <li><b>Free User</b> : Format dan template design yang terbatas serta adanya pembatasan / limit terhadap jumlah kartu yang dapat dikirim (maksimal 50).</li>
-            <li><b>Paid User</b> : Format dan template design yang banyak serta tidak ada pembatasan / unlimitted terhadap jumlah kartu yang dapat dikirim.</li>
-          </ul>
+          <li>1. Terbagi 2 : <b>Paid User & Free User</b></li>
           <li>2. User akan diberikan pilihan apakah User mau atau tidak menambahkan video ke dalam design mereka.</li>
+          <li>3. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll.</li>
         </ul>
       </section>
-      <section><h2 style="color:darkred"> Lanjutan...</h2>
+      <section><h3 style="color:darkred"> Perbedaan Free User & Paid User</h3>
         <ul>
           <li></li>
-          <li>3. Untuk video juga terdapat pembagian pada tiap user:
-            <ul>
-              <li><b>Paid User</b> : Limit Durasi Video tidak ada, Limit Size Upload Video tidak ada, Format Video Bebas.</li>
-              <li><b>Free User</b> : Limit Durasi Video 5 menit, Limit Size Upload Video 25 MB, Format Video Bebas.</li>
-            </ul>
-          </li>
-          <li>4. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll.</li>
-          <li>5. Paid User juga diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya ke <b>VMOL</b>.</li>
+          <li><b><p style ="text-align:left">1. Dalam hal format dan template design</b></li>
+          <li><p style ="text-align:left">- Free User : Terbatas</li>
+          <li><p style ="text-align:left">- Paid User : Tidak terbatas</li>
+          <li><b><p style ="text-align:left">2. Dalam hal limit</b></li>
+          <li><p style ="text-align:left">- Free User : Maksimal 50</li>
+          <li><p style ="text-align:left">- Paid User : Unlimitted</li>
+          <li><b><p style ="text-align:left">3. Dalam hal durasi video, kapasitas video</b></li>
+          <li><p style ="text-align:left">- Free User : Maksimal 5 menit, Maksimal 25 MB</li>
+          <li><p style ="text-align:left">- Paid User : Unlimitted</li>
+        </ul>
+      </section>
+      <section>
+        <ul>   
+          <li><b><p style ="text-align:left">4. Dalam hal fasilitas tambahan</b></li>
+          <li><p style ="text-align:left">- Free User : Tidak ada layanan untuk merekam percakapan dari video call</li>
+          <li><p style ="text-align:left">- Paid User : Diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya</li>
         </ul>
       </section>
       <section><h2 style="color:darkred">Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
