--- a/public/index.html
+++ b/public/index.html
@@ -71,105 +71,105 @@
           <li><p style ="text-align:left">- Paid User : Diberikan layanan untuk merekam percakapan dari video call (contoh : Skype) dan menguploadnya</li>
         </ul>
       </section>
-      <section><h2 style="color:darkred">Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h2>
+      <section><h3 style="color:darkred">Apakah ada Bisnis/Peluang Kerja yang bisa didapatkan dari VMOL?</h3>
         <ul>
           <li></li>
-          <li>A. Ya</li>
-          <li>B. Tidak</li>
-          <li>C. Bisa Jadi</li>
-          <li>D. Galau</li>
-          <li>E. Bengong</li>
-          <li>F. Tidak ada Jawaban</li>
+          <li><p style ="text-align:left">A. Ya</li>
+          <li><p style ="text-align:left">B. Tidak</li>
+          <li><p style ="text-align:left">C. Bisa Jadi</li>
+          <li><p style ="text-align:left">D. Galau</li>
+          <li><p style ="text-align:left">E. Bengong</li>
+          <li><p style ="text-align:left">F. Tidak ada Jawaban</li>
         </ul>
       </section>
-      <section><h2 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h2>
+      <section><h3 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h3>
         <ul>
           <li></li>
-          <li>MLM(MultiLine Marketing)</li>
-          <li>Advertising</li>
-          <li>OlShop(Online Shopping)</li>
-          <li>Saham</li>
-          <li>Designer</li>
-          <li>Kartu Undangan (Ulang Tahun, Pernikahan, dll)</li>
+          <li><p style ="text-align:left">1. MLM(MultiLine Marketing)</p></li>
+          <li><p style ="text-align:left">2. Advertising</p></li>
+          <li><p style ="text-align:left">3. OlShop(Online Shopping)</p></li>
+          <li><p style ="text-align:left">4. Saham</p></li>
+          <li><p style ="text-align:left">5. Designer</p></li>
+          <li><p style ="text-align:left">6. Kartu Undangan (Ulang Tahun, Pernikahan, dll)</p></li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Kelebihan VMOL</h2>
         <ul>
           <li></li>
-          <li>Efisien</li>
-          <li>Harga Ekonomis</li>
-          <li>Modern-Fashion Design Interface</li>
-          <li>Memperluas Jaringan Sosial</li>
-          <li>Terobosan Baru Social Media</li>
-          <li>Teknologi Streaming Video yang Memukau</li>
+          <li><p style ="text-align:left">1. Efisien</p></li>
+          <li><p style ="text-align:left">2. Harga Ekonomis</p></li>
+          <li><p style ="text-align:left">3. Modern-Fashion Design Interface</p></li>
+          <li><p style ="text-align:left">4. Memperluas Jaringan Sosial</p></li>
+          <li><p style ="text-align:left">5. Terobosan Baru Social Media</p></li>
+          <li><p style ="text-align:left">6. Teknologi Streaming Video yang Memukau</p></li>
         </ul>
       </section>
-      <section><h2 style="color:darkred"> Mengapa Efisien?</h2>
+      <section><h2 style="color:darkred"> Mengapa disebut Efisien?</h2>
         <ul>
           <li></li>
-          <li>Tidak perlu keahlian khusus dalam mengoperasikannya.</li>
-          <li>Tersedia e-book cara penggunaan <b>VMOL</b> baik untuk free user maupun paid user.</li>
-          <li>Mempermudah koneksi antar pengguna.</li>
+          <li><p style ="text-align:left">1. Tidak perlu keahlian khusus dalam mengoperasikannya</p></li>
+          <li><p style ="text-align:left">2. Tersedia e-book cara penggunaan <b>VMOL</b> baik untuk free user maupun paid user</p></li>
+          <li><p style ="text-align:left">3. Mempermudah koneksi antar pengguna</p></li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Mengapa disebut Harga Ekonomis?</h2>
         <ul>
           <li></li>
-          <li>Harga yang cukup terjangkau dimana < IDR 500 ribu (per bulan).</li>
-          <li>Discount bagi user lama (dalam hal perpanjangan account).</li>
-          <li>Discount bagi user yang merekomendasikan <b>VMOL</b> kepada teman.</li>
-          <li>Discount bagi user yang langsung memperpanjang account selama 1 tahun.</li>
-          <li>Pembayaran bisa menggunakan <b>PayPal, BitCoin, Visa, MasterCard</b>.</li>
+          <li><p style ="text-align:left">1. Harga yang cukup terjangkau dimana < IDR 500 ribu (per bulan)</p></li>
+          <li><p style ="text-align:left">2. Discount bagi user lama (dalam hal perpanjangan account)</p></li>
+          <li><p style ="text-align:left">3. Discount bagi user yang merekomendasikan <b>VMOL</b> kepada teman</p></li>
+          <li><p style ="text-align:left">4. Discount bagi user yang langsung memperpanjang account selama 1 tahun</p></li>
+          <li><p style ="text-align:left">5. Pembayaran bisa menggunakan <b>PayPal, BitCoin, Visa, MasterCard</b></p></li>
         </ul>
       </section>
       <section><h2 style="color:darkred">Mengapa disebut Modern-Fashion Design Interface?</h2>
         <ul>
           <li></li>
-          <li>Tampilan antarmuka pengguna yang futuristik.</li>
-          <li>User akan merasakan sensasi Social Media yang benar-benar beda daripada biasanya.</li>
+          <li><p style ="text-align:left">1. Tampilan antarmuka pengguna yang futuristik.</p></li>
+          <li><p style ="text-align:left">2. User akan merasakan sensasi Social Media yang benar-benar beda daripada biasanya</p></li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Mengapa memiliki Modern-Fashion Design Interface?</h2>
         <ul>
           <li></li>
-          <li><b>VMOL</b> memiliki design interface yang modern namun simple sehingga tidak membuat para user merasa jenuh.</li>
-          <li><b>Free User</b> dapat mengubah warna tampilan interface sesuai dengan warna yang disediakan <b>VMOL</b>.</li>
-          <li><b>Paid User</b> dapat mengubah warna tampilan interface dengan jenis warna yang lebih bervariasi atau pun user ingin mengupload gambar sendiri untuk dijadikan background interface.</li>
-          <li>Tersedia berbagai tema yang menarik untuk user interface, baik gratis maupun berbayar.</li>
+          <li><p style ="text-align:left">1. <b>VMOL</b> memiliki design interface yang modern namun simple sehingga tidak membuat para user merasa jenuh</p></li>
+          <li><p style ="text-align:left">2. <b>Free User</b> dapat mengubah warna tampilan interface sesuai dengan warna yang disediakan <b>VMOL</b></p></li>
+          <li><p style ="text-align:left">3. <b>Paid User</b> dapat mengubah warna tampilan interface dengan jenis warna yang lebih bervariasi atau pun user ingin mengupload gambar sendiri untuk dijadikan background interface</p></li>
+          <li><p style ="text-align:left">4. Tersedia berbagai tema yang menarik untuk user interface, baik gratis maupun berbayar</p></li>
         </ul>
       </section>
-      <section><h2 style="color:darkred"> Mengapa dapat Memperluas Jaringan Sosial?</h2>
+      <section><h2 style="color:darkred"> Mengapa disebut dapat Memperluas Jaringan Sosial?</h2>
         <ul>
           <li></li>
-          <li>Melalui video, orang akan lebih mudah mengenali orang lain dibandingkan dengan melihat gambar atau profile picture.</li>
-          <li>Melalui video juga, dapat mengetahui orang yang memiliki hobi yang sama sehingga dapat tercipta suatu komunitas/kumpulan orang-orang yang memiliki hobi yang sama.</li>
-          <li>Adanya fasilitas chatting online sehingga user dapat lebih mengenal satu sama lain.</li>
+          <li><p style ="text-align:left">1. Melalui video, orang akan lebih mudah mengenali orang lain dibandingkan dengan melihat gambar atau profile picture</p></li>
+          <li><p style ="text-align:left">2. Melalui video juga, dapat mengetahui orang yang memiliki hobi yang sama sehingga dapat tercipta suatu komunitas/kumpulan orang-orang yang memiliki hobi yang sama</p></li>
+          <li><p style ="text-align:left">3. Adanya fasilitas chatting online sehingga user dapat lebih mengenal satu sama lain</p></li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Mengapa disebut Terobosan Baru Social Media?</h2>
         <ul>
           <li></li>
-          <li>Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan Surat/Kartu/Undangan/Advertising.</li>
-          <li>Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang).</li>
-          <li>Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan.</li>
+          <li><p style ="text-align:left">1. Merupakan terobosan baru (pertama kali di dunia) dalam pembuatan Surat/Kartu/Undangan/Advertising</p></li>
+          <li><p style ="text-align:left">2. Interaksi di social media pada umumnya masih menggunakan media text maupun foto (media video masih jarang)</p></li>
+          <li><p style ="text-align:left">3. Video merupakan media yang lebih lengkap karena terdiri dari suara, gambar, dan tulisan</p></li>
         </ul>
       </section>
-      <section><h2 style="color:darkred">Mengapa Teknologi Streaming Video di VMOL Disebut Memukau?</h2>
+      <section><h2 style="color:darkred">Mengapa disebut Teknologi Streaming Video di VMOL Disebut Memukau?</h2>
         <ul>
           <li></li>
-          <li>Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user.</li>
-          <li><b>Paid User</b> dapat mengupload / mendownload video dengan cepat.</li>
-          <li><b>Paid User</b> dapat sambil menonton video yang sedang didownload</li>
-          <li><b>Paid User</b> dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik.</li>
+          <li><p style ="text-align:left">1. Pencegahan Buffering dengan Teknologi <i>Anti-Buffering</i> sehingga memberi kenyamanan bagi user</p></li>
+          <li><p style ="text-align:left">2. <b>Paid User</b> dapat mengupload / mendownload video dengan cepat</p></li>
+          <li><p style ="text-align:left">3. <b>Paid User</b> dapat sambil menonton video yang sedang didownload</p></li>
+          <li><p style ="text-align:left">4. <b>Paid User</b> dapat meningkatkan kualitas video yang akan dilihatnya sehingga tampilan video lebih realistik</p></li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Perbandingan VMOL dengan Aplikasi Lain</h2>
         <ul>
           <li></li>
-          <li>New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas).</li>
-          <li>Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun.</li>
-          <li>Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly).</li>
-          <li>Customer service 24 jam yang siap melayani pertanyaan, keluhan maupun saran dari user.</li>
+          <li><p style ="text-align:left">1. New user dapat langsung memakainya (menjadi free user) dimana pada aplikasi lain, new user hanya dapat memakainya pada masa trial (terbatas)</p></li>
+          <li><p style ="text-align:left">2. Menyediakan layanan yang sangat memuaskan bahkan untuk free user sekalipun</p></li>
+          <li><p style ="text-align:left">3. Harga paid user yang terjangkau dibandingkan aplikasi lain (tersedia dalam weekly, monthly, yearly)</p></li>
+          <li><p style ="text-align:left">4. Customer service 24 jam yang siap melayani pertanyaan, keluhan maupun saran dari user</p></li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> ANY QUESTION?</section>
