Edit Logbook and Edit Slide

--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,10 @@
           <li><p style ="text-align:left">- Paid User : Tidak terbatas</li>
           <li><b><p style ="text-align:left">2. Dalam hal limit</b></li>
           <li><p style ="text-align:left">- Free User : Maksimal 50</li>
-          <li><p style ="text-align:left">- Paid User : Unlimitted</li>
+          <li><p style ="text-align:left">- Paid User : Unlimited</li>
           <li><b><p style ="text-align:left">3. Dalam hal durasi video, kapasitas video</b></li>
           <li><p style ="text-align:left">- Free User : Maksimal 5 menit, Maksimal 25 MB</li>
-          <li><p style ="text-align:left">- Paid User : Unlimitted</li>
+          <li><p style ="text-align:left">- Paid User : Unlimited</li>
         </ul>
       </section>
       <section>
