lanjut desain dan update logbook

--- a/public/index.html
+++ b/public/index.html
@@ -85,12 +85,12 @@
       <section><h3 style="color:darkred"> Bisnis/Peluang Kerja VMOL</h3>
         <ul>
           <li></li>
-          <li><p style ="text-align:left">1. MLM(MultiLine Marketing)</p></li>
-          <li><p style ="text-align:left">2. Advertising</p></li>
-          <li><p style ="text-align:left">3. OlShop(Online Shopping)</p></li>
-          <li><p style ="text-align:left">4. Saham</p></li>
-          <li><p style ="text-align:left">5. Designer</p></li>
-          <li><p style ="text-align:left">6. Kartu Undangan (Ulang Tahun, Pernikahan, dll)</p></li>
+          <li>MLM(MultiLine Marketing)</li>
+          <li>Advertising</li>
+          <li>OlShop(Online Shopping)</li>
+          <li>Saham</li>
+          <li>Designer</li>
+          <li>Kartu Undangan (Ulang Tahun, Pernikahan, dll)</li>
         </ul>
       </section>
       <section><h2 style="color:darkred"> Kelebihan VMOL</h2>
