--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
       <section><h2 style="color:darkred"> Mengenal VMOL</h2>
         <ul>
           <li></li>
-          <li>1. Terbagi 2 : <b>Paid User & Free User</b></li>
-          <li>2. User akan diberikan pilihan apakah User mau atau tidak menambahkan video ke dalam design mereka.</li>
-          <li>3. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll.</li>
+          <li><p style ="text-align:left">1. Terbagi 2 : <b>Paid User & Free User</b></li>
+          <li><p style ="text-align:left">2. User akan diberikan pilihan apakah User mau atau tidak menambahkan video ke dalam design mereka.</li>
+          <li><p style ="text-align:left">3. Semua User diberikan fasilitas Chatting Online, Integrasi dengan Social App lain seperti : Instagram, Facebook, Twitter, dll.</li>
         </ul>
       </section>
       <section><h3 style="color:darkred"> Perbedaan Free User & Paid User</h3>
