add slide preview dan update logbook

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
           <li>Sebuah Aplikasi masa kini dalam pembuatan dan pengiriman Surat/Kartu/Undangan/Advertising disertai Video berbasis Online/Mobile</li>
         </ul>
       </section>
+      <section>
+        <h3 style="color:darkred" >Preview VMOL</h3>
+        <img src="img/preview.png" width="640px"></img>
+      </section>
       <section><h2 style="color:darkred"> Sejarah VMOL</h2>
         <ul>
           <li></li>
